--- a/app.json
+++ b/app.json
@@ -21,7 +21,10 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "blockedPermissions": ["android.permission.RECORD_AUDIO"],
+      "permissions": ["RECORD_AUDIO"]
+      
     },
     "web": {
       "favicon": "./assets/favicon.png"
